fix spacing

--- a/apps/reference/src/css/components/_button-card.scss
+++ b/apps/reference/src/css/components/_button-card.scss
@@ -1,5 +1,5 @@
 :root {
-  --custom-button-card-padding: 2rem;
+  --custom-button-card-padding: 1.5rem;
 }
 
 .button-card__container {
